# nefer-backend

./: .gitignore  GEMINI.md  main.py  pyproject.toml  railway.toml
.gemini/: pre-commit.md
.gemini/steps/: 01_implementation_plan.md  stage2-summary.md
src/: config.py  database.py  schemas.py
src/api/: profiles.py  router.py
src/core/: config.py
src/db/: supabase.py
src/services/: ai_service.py  extractor.py  profile_builder.py  profile_storage.py
src/tests/: test_ai_service.py  test_extractor.py  test_imports.py
src/tests_live/: build_profiles.py
static/: index.html
